syntax = "proto3";

import "google/protobuf/timestamp.proto";

package shed.v1;

message DatabaseValues {
  oneof value {
    StringValues string_values = 1;
    FloatValues float_values = 2;
  }
}

message StringValues {
  repeated string values = 1;
}

message FloatValues {
  repeated double values = 1;
}

message PartIndex  {
  string id = 1;
  map<string, Offsets> offsets = 2;
  repeated string inherits = 3;
  google.protobuf.Timestamp created = 4;
  repeated DatabaseValues keys = 5;
  
}

message Offsets {
  repeated int64 offsets = 1;
}

enum ColType {
  COL_TYPE_UNSPECIFIED = 0;
  COL_TYPE_FLOAT = 1;
  COL_TYPE_STRING = 2;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

message Column {
  ColType col_type = 1;
  string name = 2;
}

message SortDef {
  string name = 1;
  SortOrder order = 2;
}

message TableDef {
  string name = 1;
  repeated Column columns = 2;
  repeated SortDef order = 3;
}

message TableState {
  TableDef def = 1;
}

message PartData {
  TableDef def = 1;
  map<string, DatabaseValues> rows = 2;
}
